lab1/Test/L1-A-13-4.output
Error Type A at Line 1
Error Type B at Line 8
Error Type B at Line 17
Error Type B at Line 27
Error Type B at Line 34
Error Type A at Line 37
Error Type B at Line 43
Error Type A at Line 45
Error Type B at Line 52
