lab1/Test/L1-A-13-4.cmm
int @IsUA5tBbsd5Aajs ( int Bsnsxpf0 ) {
  struct {
  }xx0wg0 = Sd1IatXa_OPwjT9Q9o5 && Mw7t32mXx < FsAu3R5OaUnVa8erO_ 
    + D / ! - ( AeJRSbu11b = P_TYLUk || sUMmiSDs8cKqV_WWHIj 
    >= d2Nkv [ ocnmV1nxIxpu || tcYro - IYSO / ! Ay__txi 
    ( bxr3xc || DI2 == ! ( prvm || q && p9 != ( UUW6H 
    <= m + JYZL ( d7uRLeAUCLzle2lsV , wDyyb5A3Bm43xmW22zm 
    ) ) ) . p1haBWiIZCg / 2095080883 > wytKqE * ) ] * 
    NaA ( ) ) . a8cJPGUVc0T3_oR3ZXi , fjOkvy2GOUTE ;
}
int ;
float DpS4SMScfe [ 282869848 ] 
;
struct Xe wpp ( ) {
  while ( gyXc6wi )   if ( qGB )   return Jxfh4J6mGNoeMf5o 
    ;
else || {
    int HLdgMoTUXYDHs ;
    int Fl1ErVyFXVKAfzz ;
  }

}
int WbuAi6mLdFNByDub1bi , jw2xGJ7CGd4L31R6v 

;
struct _STYZ8pgJAJ0J8v {
}= Tf_ny6jSEU1Rm ( ) {
}
int iG ( ) {
}
int ;
int fuKbWPUObP_lHrTS ( int R , int AwkW282ycB ) {
}
int Rwq9Ok if ( ) {
}
int ;
int LZ9kYOCd8LS ( ) ~{
  if ( gKgj )   CvNasN34WU ;

}
int ;
int ;
;
int ;
int I ( ) '{
  RVIq8Svrobml1hb ;
  if ( C4Khzribn0tGP4ZrGpJk )   vv26V ;
else   if ( cYm9 )   nToxVPWpGFl ;


}
while 